# Raytracer

./: .gitignore  CMakeLists.txt  Readme.md  clean.sh
.github/workflows/: test.yml
scene/: coloredspheres.cfg  coloredspheres_centerlight.cfg  multifigure.cfg  reflection.cfg  room.cfg  solar_system.cfg  stairs.cfg  treeScene.cfg
src/: main.cpp  main.hpp
src/Common/: Math.cpp  Math.hpp  Matrix4.cpp  Matrix4.hpp  Vector3.cpp  Vector3.hpp
src/Core/: Core.cpp  Core.hpp  ObjFiles.cpp  Parser.cpp  Parser.hpp  State.cpp  State.hpp
src/Core/Renderer/: FrameBuffer.cpp  FrameBuffer.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/Core/Renderer/Cluster/: Client.cpp  Client.hpp  Server.cpp  Server.hpp
src/Core/Renderer/Display/: Display.cpp  Display.hpp
src/Core/Renderer/Thread/: RendererCluster.cpp  RendererCluster.hpp
src/Error_Parsing/: ErrorHandling.cpp  ErrorHandling.hpp
src/Objects/: Object.hpp
src/Objects/Common/: Common.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp
src/Objects/Drawable/: CappedCone.cpp  CappedCone.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Disk.cpp  Disk.hpp  Ellipsoid.cpp  Ellipsoid.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Objects/Factory/: Factory.cpp
src/Objects/Light/: DirectionalLight.cpp  DirectionalLight.hpp
